--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,10 +19,11 @@ packages = [
 python = "^3.8"
 requests = "^2.31.0"
 beautifulsoup4 = "^4.11.2"
-lxml = "^4.9.2"
 internetarchive = "^3.5.0"
 rich = "^13.4.2"
 python-slugify = "^8.0.1"
+chardet = "^5.2.0"
+html5lib = "^1.1"
 
 
 [tool.poetry.dev-dependencies]
